<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/commentEd"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_32"
        android:layout_marginLeft="@dimen/dimen_32"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="@dimen/dimen_32"
        android:layout_marginRight="@dimen/dimen_32"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sendMessageBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,LabelFor" />

    <ImageButton
        android:id="@+id/sendMessageBtn"
        android:layout_width="@dimen/dimen_60"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_32"
        android:layout_marginRight="@dimen/dimen_32"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_send_24"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>