<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".ui.activities.MainActivity"
		>
	<SearchView
		android:id="@+id/searchView"
		android:layout_width="@dimen/dimen_0"
		android:layout_height="wrap_content"
		android:layout_marginStart="@dimen/dimen_32"
		android:layout_marginLeft="@dimen/dimen_32"
		android:layout_marginTop="@dimen/dimen_32"
		android:layout_marginEnd="@dimen/dimen_32"
		android:layout_marginRight="@dimen/dimen_32"
		android:layout_marginBottom="@dimen/dimen_16"
		android:background="@drawable/search_background"
		android:elevation="2dp"
		android:queryHint="Search"
		app:layout_constraintBottom_toTopOf="@+id/imageGridView"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:targetApi="lollipop" />

	<GridView
		android:id="@+id/imageGridView"
		android:layout_width="@dimen/dimen_0"
		android:layout_height="@dimen/dimen_0"
		android:numColumns="2"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/searchView" >


	</GridView>

	<ProgressBar
		android:id="@+id/progressBar"
		style="?android:attr/progressBarStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:visibility="invisible"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/imageGridView"
		app:layout_constraintStart_toStartOf="@+id/imageGridView"
		app:layout_constraintTop_toBottomOf="@+id/searchView" />
</androidx.constraintlayout.widget.ConstraintLayout>