<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/dimen_150"
        android:layout_height="@dimen/dimen_150"
        android:layout_margin="@dimen/dimen_2"
        android:layout_marginStart="@dimen/dimen_8"
        android:layout_marginLeft="@dimen/dimen_8"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginEnd="@dimen/dimen_8"
        android:layout_marginRight="@dimen/dimen_8"
        android:layout_marginBottom="@dimen/dimen_8"
        app:cardCornerRadius="@dimen/dimen_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>