...
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentRecyclerView"
        android:layout_width="@dimen/dimen_0"
        android:layout_height="@dimen/dimen_200"
        android:layout_marginBottom="@dimen/dimen_1"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_image" />

    <include
        android:id="@+id/include"
...
